--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "How to use the wqspt package"
 author: "Drew Day, James Peng"
-date: "5/26/2022"
+date: "5/26/2022 (Updated: 3/4/2025)"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{How to use the wqspt package}
@@ -19,8 +19,7 @@ knitr::opts_chunk$set(
 # Introduction 
 
 Weighted quantile sum (WQS) regression is a statistical technique to evaluate the 
-effect of complex exposure mixtures on an outcome (
-[Carrico 2015](https://doi.org/10.1007/s13253-014-0180-3)). It is a 
+effect of complex exposure mixtures on an outcome ([Carrico 2015](https://doi.org/10.1007/s13253-014-0180-3)). It is a 
 single-index method which estimates a combined mixture sum effect as well as weights 
 determining each individual mixture component's contributions to the sum effect. 
 However, the model features a statistical power and Type I error (i.e., false positive) 
@@ -65,7 +64,7 @@ with an outcome in a prespecified direction. It fits the following model:
 $Y = \beta_0 + \beta_1(\sum_{i=1}^{m} w_i {X_q}_i) + Z'\gamma$   
 
 Where $Y$ is the outcome variable, $\beta_0$ is the intercept, $\beta_1$ is the 
-coefficient for the weighted quantile sum, $\sum_{i=1}^{c} w_i {X_q}_i$ is the 
+coefficient for the weighted quantile sum, $\sum_{i=1}^{m} w_i {X_q}_i$ is the 
 weighted index for the set of quantiled mixture exposures, $Z$ is the set of 
 covariates, and $\gamma$ is the regression coefficients for the covariates. 
 
